--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,7 +1,8 @@
-{# templates/home.html.twig #}
+{# templates/index.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Streemi | Accueil{% endblock %}
+{% block title %}Streemi | Accueil
+{% endblock %}
 
 {% block content %}
 	<!-- Main Content -->
@@ -60,7 +61,11 @@
 			</div>
 			<div
 				class="mt-4 grid grid-cols-2 gap-y-5 sm:grid-cols-3 gap-x-5">
-				{% include 'parts/movies/movie-card.html.twig' %}
+				<!-- Movie Cards -->
+				{% for movie in movies %}
+					{% include 'parts/movies/movie-card.html.twig'%}
+				{% endfor %}
+				<!-- /Movie Cards -->
 			</div>
 		</section>
 	</main>
